WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198869
WebKit's NSAttributedString.h is not included in the WebKit.h umbrella header
https://bugs.webkit.org/show_bug.cgi?id=198869
Summary
WebKit's NSAttributedString.h is not included in the WebKit.h umbrella header
Tim Horton
Reported
2019-06-14 14:45:53 PDT
WebKit's NSAttributedString.h is not included in the WebKit.h umbrella header
Attachments
Patch
(1.20 KB, patch)
2019-06-14 14:46 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(1.72 KB, patch)
2019-06-14 15:01 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(1.72 KB, patch)
2019-06-14 15:02 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-06-14 14:46:25 PDT
Created
attachment 372143
[details]
Patch
Tim Horton
Comment 2
2019-06-14 14:47:12 PDT
<
rdar://problem/51754437
>
Tim Horton
Comment 3
2019-06-14 15:01:37 PDT
Created
attachment 372146
[details]
Patch
Tim Horton
Comment 4
2019-06-14 15:02:29 PDT
Created
attachment 372147
[details]
Patch
WebKit Commit Bot
Comment 5
2019-06-14 15:50:06 PDT
Comment on
attachment 372147
[details]
Patch Clearing flags on attachment: 372147 Committed
r246447
: <
https://trac.webkit.org/changeset/246447
>
WebKit Commit Bot
Comment 6
2019-06-14 15:50:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug