WebKit's NSAttributedString.h is not included in the WebKit.h umbrella header https://bugs.webkit.org/show_bug.cgi?id=198869 <rdar://problem/51754437>

Reviewed by Timothy Hatcher.

* Shared/API/Cocoa/WebKit.h:
Make the new API available to modularized clients and folks who just import WebKit.h


Canonical link: https://commits.webkit.org/212842@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246447 268f45cc-cd09-0410-ab3c-d52691b4dbfc