Source/WebKit/UIProcess/API/Cocoa/NSAttributedString.h
@@ -23,6 +23,7 @@
  * THE POSSIBILITY OF SUCH DAMAGE.
  */
 
+#import <Foundation/Foundation.h>
 #import <WebKit/WKFoundation.h>
 
 #if TARGET_OS_IPHONE
